<resources>
    <string name="app_name">ContactTuts</string>
    <string name="pleaseWait">Please wait</string>
    <string name="permissionError">Until you grant the permission, we cannot display the contacts</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="ok">Ok</string>
    <string name="addContact">Contact added successfully!</string>
    <string name="deleteContact">Delete contact successfully</string>
    <string name="updateContact">Update contact successfully</string>
</resources>
