<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <EditText
        android:id="@+id/edt_name"
        style="@android:style/TextAppearance.Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/edt_mobile_number"
        style="@android:style/TextAppearance.Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_name"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="number"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_delete"
        style="@android:style/TextAppearance.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edt_mobile_number"
        android:layout_alignStart="@+id/edt_mobile_number"
        android:layout_below="@+id/edt_mobile_number"
        android:layout_marginTop="22dp"
        android:background="@android:color/transparent"
        android:text="@string/delete"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_update"
        style="@android:style/TextAppearance.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_delete"
        android:layout_below="@+id/edt_mobile_number"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:layout_toLeftOf="@+id/btn_cancel"
        android:layout_toStartOf="@+id/btn_cancel"
        android:background="@android:color/transparent"
        android:text="@string/update"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        style="@android:style/TextAppearance.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btn_update"
        android:layout_below="@+id/edt_mobile_number"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>
</RelativeLayout>
